--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,8 +67,40 @@ jobs:
           paths: [backend/node_modules]
           key: backend-build        
 
+  test-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+           key: frontend-build
+      - run:
+          name: Run Frontend Test
+          command: |
+             cd frontend
+             npm install
+             npm run tests
+                
+  test-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+           key: backend-build
+      - run:
+          name: Run Backend Test
+          command: |
+             cd backend
+             npm install
+             npm run tests
+
 workflows:
   default:
     jobs:
       - build-frontend
       - build-backend
+      - test-frontend:
+          requires: [build-frontend]
+      - test-backend:
+          requires: [build-backend]
