--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,7 @@ jobs:
           command: |
              cd frontend
              npm install
-             npm run tests
+             npm run test
                 
   test-backend:
     docker:
@@ -93,7 +93,7 @@ jobs:
           command: |
              cd backend
              npm install
-             npm run tests
+             npm run test
 
 workflows:
   default:
