--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,7 +110,7 @@ jobs:
           command: |
             cd frontend
             npm install
-            npm audit fix
+            npm audit fix --force
             npm audit --audit-level=critical
 
   scan-backend:
@@ -128,7 +128,7 @@ jobs:
           command: |
             cd backend
             npm install
-            npm audit fix
+            npm audit fix --force
             npm audit --audit-level=critical
 
 workflows:
