fix errors with additional code

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -111,6 +111,8 @@ jobs:
             cd frontend
             npm install
             npm audit fix --audit-level=critical --force
+            npm update minimist --depth 4
+            npm update loader-utils --depth 2
             npm audit --audit-level=critical
 
   scan-backend:
@@ -129,6 +131,7 @@ jobs:
             cd backend
             npm install
             npm audit fix --audit-level=critical --force
+            npm update mkdirp --depth 2
             npm audit --audit-level=critical
 
 workflows:
