--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,15 +5,14 @@ commands:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
     parameters:
       # Add parameter here
-      - ${CIRCLE_WORKFLOW_ID}   
-      - ${CIRCLE_WORKFLOW_ID:0:7}
+      - CIRCLE_WORKFLOW_ID 
     steps:
       - run:
           name: Destroy environments
           when: on_fail
           command: |
-            aws cloudformation delete-stack --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
-            aws cloudformation delete-stack --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
+            aws cloudformation delete-stack --stack-name udapeople-backend-parameters.CIRCLE_WORKFLOW_ID:0:7
+            aws cloudformation delete-stack --stack-name udapeople-frontend-parameters.CIRCLE_WORKFLOW_ID:0:7
 
 #   revert-migrations:
 #     description: Revert the last migration if successfully run in the current workflow.
