--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -188,6 +188,10 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Install dependencies
+          command: |
+              apk add --update curl aws-cli
+      - run:
           name: Run migrations
           command: |
               cd backend
@@ -198,9 +202,9 @@ jobs:
           command: |
               if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
               then
-                 curl https://kvdb.io/UDu3YZj7L2v675CdH6pg39/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+                 curl https://kvdb.io/UDu3YZj7L2v675CdH6pg39/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1' --insecure
               fi
-              
+
       - destroy-environment
 
   deploy-frontend:
@@ -210,9 +214,11 @@ jobs:
       - checkout
       - attach_workspace:
           at: ~/
-      # - run:
-      #     name: Install dependencies
-      #     command: |
+      - run:
+          name: Install dependencies
+          command: |
+              apk add --update curl aws-cli tar gzip nodejs npm
+              apk add --update npm
       - run:
           name: Get backend url
           command: |
