--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -184,13 +184,14 @@ jobs:
 
   run-migrations:
     docker:
-      - image: circleci/node:13.8.0
+      - image: python:3.11-rc-alpine
     steps:
       - checkout
       - run:
           name: Install dependencies
           command: |
-              apk add --update curl aws-cli
+              apk add --update curl aws-cli tar gzip nodejs npm
+              apk add --update npm
       - run:
           name: Run migrations
           command: |
@@ -209,7 +210,7 @@ jobs:
 
   deploy-frontend:
     docker:
-      - image: amazon/aws-cli
+      - image: python:3.11-rc-alpine
     steps:
       - checkout
       - attach_workspace:
