--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -252,6 +252,8 @@ jobs:
       - run:
           name: Install dependencies
           command: |
+              apk add --update curl aws-cli tar gzip nodejs npm
+              apk add --update npm
               apk add --update ansible
       - run:
           name: Deploy backend
