--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -7,3 +7,9 @@
   unarchive:
     src: ~/project/artifact.tar.gz
     dest: /home/ubuntu/backend
+
+- name: Start app
+  command: |
+      npm install
+      pm2 stop default
+      pm2 start npm -- start 
