--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -283,13 +283,11 @@ jobs:
               apk add --update npm
               apk add --update ansible
       - run:
-          name: Get backend url
+          name: Backend smoke test.
           command: |
               export BACKEND_IP=$(aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}")
-      - run:
-          name: Backend smoke test.
-          command: |
+              echo "${BACKEND_IP}"
               export API_URL="http://${BACKEND_IP}:3030"
               echo "${API_URL}"
               if curl "${API_URL}/api/status" | grep "ok"
