--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -290,7 +290,7 @@ jobs:
               echo "${BACKEND_IP}"
               export API_URL="http://${BACKEND_IP}:3030"
               echo "${API_URL}"
-              if curl "${API_URL}/api/status" | grep "ok"
+              if curl --globoff "${API_URL}/api/status" | grep "ok"
               then
                 return 0
               else
