--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -225,7 +225,7 @@ jobs:
           name: Get backend url
           command: |
               export BACKEND_IP=$(aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}")
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7} --output text")
               export API_URL="http://${BACKEND_IP}:3030"
               echo "${API_URL}"
               echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
@@ -286,11 +286,11 @@ jobs:
           name: Backend smoke test.
           command: |
               export BACKEND_IP=$(aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}")
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7} --output text")
               echo "${BACKEND_IP}"
               export API_URL="http://${BACKEND_IP}:3030"
               echo "${API_URL}"
-              if curl --globoff "${API_URL}/api/status" | grep "ok"
+              if curl "${API_URL}/api/status" | grep "ok"
               then
                 return 0
               else
