--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -225,7 +225,8 @@ jobs:
           name: Get backend url
           command: |
               export BACKEND_IP=$(aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7} --output text")
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --output text)
               export API_URL="http://${BACKEND_IP}:3030"
               echo "${API_URL}"
               echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
@@ -285,8 +286,9 @@ jobs:
       - run:
           name: Backend smoke test.
           command: |
-              BACKEND_IP=aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}"
+              export BACKEND_IP=$(aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --output text)
               echo "${BACKEND_IP}"
               export API_URL="http://${BACKEND_IP}:3030"
               echo "${API_URL}"
