--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,3 +1,4 @@
+---
 - name: "create directory"
   file:
     path: /home/ubuntu/backend
@@ -8,8 +9,13 @@
     src: ~/project/artifact.tar.gz
     dest: /home/ubuntu/backend
 
+- name: "Installing Node Dependencies"
+  shell: |
+      cd ~/home/ubuntu/backend
+      npm i
+
 - name: Start app
   command: |
       npm install
       pm2 stop default
-      pm2 start npm -- start 
+      pm2 start npm -- start
