--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -23,12 +23,12 @@
     src: app.tar.gz
     dest: /home/ubuntu/
     
-- name: "Unpack app.tar.gz files"
+- name: "Unpack artifact.tar.gz files"
   become: true
   shell: |
     cd /home/ubuntu/
-    tar xzvf app.tar.gz
-    rm app.tar.gz
+    tar xzvf ~/project/artifact.tar.gz
+    rm ~/project/artifact.tar.gz
     ls
 - name: "running backend app"
   become: true
