--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -311,7 +311,7 @@ jobs:
                 return 1
               fi
 
-      # - destroy-environment
+      - destroy-environment
 
 #   cloudfront-update:
 #     docker:
