--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,37 +1,24 @@
-- name: "upgrade packages."
-  become: true
-  apt:
-    upgrade: "yes"
+---
+- name: create backend directory
+  file:
+    path: ~/backend
+    state: directory
 
-- name: "install dependencies."
-  become: true
-  apt:
-    name: ["nodejs", "npm"]
-    update_cache: yes
-
-- name: "install pm2"
-  become: true
-  npm:
-    name: pm2
-    global: yes
-    production: yes
-    state: present
-
-- name: "deploy backend app to new location"
-  become: true
+- name: copy files
   copy:
-    src: ~/project/artifact.tar.gz
-    dest: /home/ubuntu/
+    src: artifact.tar.gz
+    dest: ~/backend
+    backup: true
     
-- name: "Unpack artifact.tar.gz files"
-  become: true
+- name: extract backend files
   shell: |
-    cd /home/ubuntu/
-    tar xzvf artifact.tar.gz
+    cd ~/backend
+    tar -xvf artifact.tar.gz
     rm artifact.tar.gz
-    ls
-- name: "running backend app"
-  become: true
+
+- name: start app
   shell: |
-    cd /home/ubuntu/dist
-    pm2 start main.js
+    cd ~/backend
+    npm install
+    pm2 stop default
+    pm2 start npm -- start
