--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,24 @@
 version: 2.1
 
 commands:
+  revert-migrations:
+    description: Revert the last migration
+    parameters:
+      workflow_id:
+        type: string      
+    steps:
+      - run:
+        name: Revert migrations
+        when: on_fail
+        command: |
+          SUCCESS=$(curl --insecure  https://kvdb.io/UDu3YZj7L2v675CdH6pg39/migration_ << parameters.workflow_id >>)
+          if (( $SUCCESS == 1 ));
+          then
+            cd ~/project/backend
+            npm install
+            npm run migration:revert
+          fi  
+
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
     steps:
@@ -11,25 +29,6 @@ commands:
             aws cloudformation delete-stack --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
             aws cloudformation delete-stack --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
             aws s3 rb s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --force
-
-#   revert-migrations:
-#     description: Revert the last migration if successfully run in the current workflow.
-#     parameters:
-#       # Add parameter here     
-#     steps:
-#       - run:
-#           name: Revert migrations
-#           # Add when this will run
-#           command: |
-#             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-#             SUCCESS = 1
-#             if(( $SUCCESS==1 )); 
-#             then
-#             #  cd ~/project/backend
-#             #  npm install
-#             #  Add revert code here. You can find this in the Getting Started section.
-#               exit 1
-#             fi
             
 jobs:
   build-frontend:
@@ -162,6 +161,8 @@ jobs:
           paths:
             - project/.circleci/ansible/inventory.txt
       - destroy-environment
+            - revert-migrations
+
 
   configure-infrastructure:
     docker:
@@ -208,6 +209,7 @@ jobs:
               fi
 
       - destroy-environment
+      - revert-migrations
 
   deploy-frontend:
     docker:
@@ -241,6 +243,8 @@ jobs:
               aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
 
       - destroy-environment
+      - revert-migrations
+
                     
   deploy-backend:
     docker:
@@ -270,7 +274,8 @@ jobs:
               echo "Contents  of the inventory.txt file is -------"
               cat inventory.txt
               ansible-playbook -i inventory.txt deploy-backend.yml      
-      - destroy-environment 
+      - destroy-environment
+      - revert-migrations 
 
   smoke-test:
     docker:
@@ -305,13 +310,13 @@ jobs:
               echo ${URL} 
               if curl -s ${URL} | grep "Welcome"
               then
-                # Change this to 0 after the job fails
                 return 1
               else
                 return 1
               fi
 
       - destroy-environment
+      - revert-migrations
 
 #   cloudfront-update:
 #     docker:
