--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,22 +2,19 @@ version: 2.1
 
 commands:
   revert-migrations:
-    description: Revert the last migration
-    parameters:
-      workflow_id:
-        type: string      
-    steps:
-      - run:
+  description: Revert the last migration      
+  steps:
+    - run:
         name: Revert migrations
         when: on_fail
         command: |
-          SUCCESS=$(curl --insecure  https://kvdb.io/UDu3YZj7L2v675CdH6pg39/migration_ << parameters.workflow_id >>)
-          if (( $SUCCESS == 1 ));
-          then
-            cd ~/project/backend
-            npm install
-            npm run migration:revert
-          fi  
+            SUCCESS=$(curl --insecure  https://kvdb.io/UDu3YZj7L2v675CdH6pg39/migration_${CIRCLE_WORKFLOW_ID:0:7})
+            if (( $SUCCESS == 1 ));
+            then
+              cd ~/project/backend
+              npm install
+              npm run migration:revert
+            fi  
 
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
