--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,6 @@
 version: 2.1
 
 commands:
-  revert-migrations:
-  description: Revert the last migration      
-  steps:
-    - run:
-        name: Revert migrations
-        when: on_fail
-        command: |
-            SUCCESS=$(curl --insecure  https://kvdb.io/UDu3YZj7L2v675CdH6pg39/migration_${CIRCLE_WORKFLOW_ID:0:7})
-            if (( $SUCCESS == 1 ));
-            then
-              cd ~/project/backend
-              npm install
-              npm run migration:revert
-            fi  
-
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
     steps:
@@ -23,10 +8,30 @@ commands:
           name: Destroy environments
           when: on_fail
           command: |
-            aws cloudformation delete-stack --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
-            aws cloudformation delete-stack --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
-            aws s3 rb s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --force
-            
+              aws cloudformation delete-stack --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
+              aws cloudformation delete-stack --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
+              aws s3 rb s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --force
+  
+  revert-migrations:
+    description: Revert the last migration if successfully run in the current workflow.
+    parameters:
+      workflow_id:
+        type: string     
+    
+    steps:
+      - run:
+          name: Revert migrations
+          when: on_fail
+          command: |
+            SUCCESS=`curl --insecure https://kvdb.io/UDu3YZj7L2v675CdH6pg39/migration_<< parameters.workflow_id >>`
+            if (( $SUCCESS == 1 ));
+            then
+              cd ~/project/backend
+              apk add --update npm
+              npm install
+              npm run migration:revert
+            fi
+              
 jobs:
   build-frontend:
     docker:
