--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,16 +14,15 @@ commands:
   
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
-    parameters:
-      workflow_id:
-        type: string     
-    
+    # parameters:
+    #   workflow_id:
+    #     type: string     
     steps:
       - run:
           name: Revert migrations
           when: on_fail
           command: |
-            SUCCESS=`curl --insecure https://kvdb.io/UDu3YZj7L2v675CdH6pg39/migration_<< parameters.workflow_id >>`
+            SUCCESS=curl --insecure https://kvdb.io/UDu3YZj7L2v675CdH6pg39/migration_-${CIRCLE_WORKFLOW_ID:0:7}
             if (( $SUCCESS == 1 ));
             then
               cd ~/project/backend
