--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,10 +13,7 @@ commands:
               aws s3 rb s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --force
   
   revert-migrations:
-    description: Revert the last migration if successfully run in the current workflow.
-    # parameters:
-    #   workflow_id:
-    #     type: string     
+    description: Revert the last migration if successfully run in the current workflow.     
     steps:
       - run:
           name: Revert migrations
@@ -205,7 +202,7 @@ jobs:
           command: |
               if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
               then
-                 curl https://kvdb.io/UDu3YZj7L2v675CdH6pg39/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1' --insecure
+                 curl -k https://kvdb.io/UDu3YZj7L2v675CdH6pg39/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1' --insecure
               fi
 
       - destroy-environment
