--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -194,16 +194,20 @@ jobs:
       - run:
           name: Run migrations
           command: |
-              cd backend
-              npm install
-              npm run migrations > migrations_dump.txt
+            cd backend
+            npm install
+            npm install aws-cli
+            npm run build
+            npm run migrations > migrations_dump.txt
+            echo cat migrations_dump.txt
+            cat migrations_dump.txt 
       - run:
           name: Send migration results to memstash
           command: |
-              if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
-              then
-                 curl -k https://kvdb.io/UDu3YZj7L2v675CdH6pg39/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1' --insecure
-              fi
+            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+            then
+              curl -k https://kvdb.io/VyR2oC6F8ePU8DgMhUthmQ/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+            fi
 
       - destroy-environment
       - revert-migrations
