--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -197,9 +197,10 @@ jobs:
             cd backend
             npm install
             npm install aws-cli
+            npm audit fix --audit-level=critical --force
+            npm update mkdirp --depth 2
             npm run build
             npm run migrations > migrations_dump.txt
-            npm audit fix --force --audit-level=critical
             echo cat migrations_dump.txt
             cat migrations_dump.txt 
       - run:
