--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -197,7 +197,7 @@ jobs:
             cd backend
             npm install
             npm install aws-cli
-            npm audit fix --audit-level=critical --force
+            npm audit fix --audit-level=critical
             npm update mkdirp --depth 2
             npm run build
             npm run migrations > migrations_dump.txt
