--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -183,26 +183,19 @@ jobs:
 
   run-migrations:
     docker:
-      - image: python:3.11-rc-alpine
+      - image: circleci/node:13.8.0
     steps:
       - checkout
-      - run:
-          name: Install dependencies
-          command: |
-              apk add --update curl aws-cli tar gzip nodejs npm
-              apk add --update npm
       - run:
           name: Run migrations
           command: |
             cd backend
-            npm install
-            npm install aws-cli
-            # npm audit fix --audit-level=critical
-            # npm update mkdirp --depth 2
-            # npm run build
+            sudo apt update
+            sudo apt install -y awscli
+            sudo npm install
             npm run migrations > migrations_dump.txt
+            cat migrations_dump.txt
             echo cat migrations_dump.txt
-            cat migrations_dump.txt 
       - run:
           name: Send migration results to memstash
           command: |
