--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -195,11 +195,15 @@ jobs:
             sudo npm install
             npm run migrations > migrations_dump.txt
             cat migrations_dump.txt
-            echo cat migrations_dump.txt
+            echo migrations_dump.txt
       - run:
           name: Send migration results to memstash
           command: |
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+            then
+              curl -k https://kvdb.io/N4YoiCp79B6BT9usbikaKf/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+              
+            if grep -q "No migrations are pending" ~/project/backend/migrations_dump.txt
             then
               curl -k https://kvdb.io/N4YoiCp79B6BT9usbikaKf/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             fi
