--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,14 +19,10 @@ commands:
           name: Revert migrations
           when: on_fail
           command: |
-            SUCCESS=curl https://kvdb.io/N4YoiCp79B6BT9usbikaKf/migration_${CIRCLE_WORKFLOW_ID:0:7} --insecure
-            if (( $SUCCESS == 1 ));
-            then
-              cd ~/project/backend
-              apk add --update npm
-              npm install
-              npm run migration:revert
-            fi
+                cd ~/project/backend
+                apk add --update npm
+                npm install
+                npm run migration:revert
               
 jobs:
   build-frontend:
@@ -195,16 +191,12 @@ jobs:
             sudo npm install
             npm run migrations > migrations_dump.txt
             cat migrations_dump.txt
-            echo migrations_dump.txt
       - run:
           name: Send migration results to memstash
           command: |
-            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+            if grep -q "has been executed successfully." ./backend/migrations_dump.txt
             then
-              curl -k https://kvdb.io/N4YoiCp79B6BT9usbikaKf/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
-              
-            if grep -q "No migrations are pending" ~/project/backend/migrations_dump.txt
-            then
+              echo "Invoking KVDB"
               curl -k https://kvdb.io/N4YoiCp79B6BT9usbikaKf/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             fi
 
