--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,10 +19,10 @@ commands:
           name: Revert migrations
           when: on_fail
           command: |
-                cd ~/project/backend
-                apk add --update npm
-                npm install
-                npm run migration:revert
+              cd ~/project/backend
+              npm install --force
+              npm run build
+              npm run migrations:revert
               
 jobs:
   build-frontend:
